--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.6.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
@@ -67,5 +66,12 @@ dependencies {
     // Koin main features for Android
     def koin_version= "3.2.0"
     implementation "io.insert-koin:koin-android:$koin_version"
+
+    // Unit Test
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation "androidx.test:core-ktx:1.4.0"
+    testImplementation "org.mockito:mockito-core:4.5.1"
+    testImplementation "org.mockito.kotlin:mockito-kotlin:4.0.0"
+    testImplementation "io.mockk:mockk:1.12.4"
 
 }
