--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'com.android.application' version '7.1.0' apply false
     id 'com.android.library' version '7.1.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+    id "org.jetbrains.kotlinx.kover" version "0.5.1"
 }
 
 task clean(type: Delete) {
